Initialize project structure with React, Vite, and essential components

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -32,3 +32,9 @@ jobs:
         run: npm test
         env:
           CI: true
+          
+      - name: Check test coverage
+        run: npm run test:coverage
+        
+      - name: Build
+        run: npm run build
